vue definitive tous devices hors animations

--- a/bistrotdupotager.html
+++ b/bistrotdupotager.html
@@ -28,55 +28,55 @@
                 </header>
                 <div class="menucontainer">
                     <div class="entrées">
-                    <h2 class="foodtitle">ENTRÉES</h2>
+                    <h3 class="foodtitle">ENTRÉES</h3>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle">Soupe de fêves basques</h3>
+                            <h4 class="foodcardtitle">Soupe de fêves basques</h4>
                                 <p class="foodcarddescription">Au piment d'Espelette</p>
                                     <p class="foodcardprice">25€</p>
                         </div>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle">Foie gras de canard mi-cuit</h3>
+                            <h4 class="foodcardtitle">Foie gras de canard mi-cuit</h4>
                                 <p class="foodcarddescription">À la truffe blanche</p>
                                     <p class="foodcardprice">35€</p>
                         </div>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle">Oeuf poché</h3>
+                            <h4 class="foodcardtitle">Oeuf poché</h4>
                                 <p class="foodcarddescription">Et sa panelure d'osso-iraty</p>
                                     <p class="foodcardprice">20€</p>
                         </div>
                 </div>
                     <div class="plats">
-                    <h2 class="foodtitle">PLATS</h2>
+                    <h3 class="foodtitle">PLATS</h3>
                     <div class="foodcard">
-                        <h3 class="foodcardtitle">Côte de boeuf à l'ail des ours</h3>
-                            <p class="foodcarddescription">Accompagnée de frites de patate douce</p>
+                        <h4 class="foodcardtitle">Côte de boeuf à l'ail des ours</h4>
+                            <p class="foodcarddescription">frites de patate douce</p>
                             <p class="foodcardprice">40€</p>
                     </div>
                     <div class="foodcard">
-                        <h3 class="foodcardtitle">Agneau en croute</h3>
+                        <h4 class="foodcardtitle">Agneau en croute</h4>
                             <p class="foodcarddescription">Aux vieux légumes</p>
                             <p class="foodcardprice">35€</p>
                     </div>
                     <div class="foodcard">
-                        <h3 class="foodcardtitle">Filet de bonito</h3>
+                        <h4 class="foodcardtitle">Filet de bonito</h4>
                             <p class="foodcarddescription">À l'orange sanguine</p>
                             <p class="foodcardprice">44€</p>
                     </div>
                     </div>
                     <div class="dessert">
-                    <h2 class="foodtitle">DESSERTS</h2>
+                    <h3 class="foodtitle">DESSERTS</h3>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle">Gâteau basque</h3>
+                            <h4 class="foodcardtitle">Gâteau basque</h4>
                                 <p class="foodcarddescription">Revisité</p>
                                     <p class="foodcardprice">18€</p>
                         </div>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle">Macaron au chocolat d'exception</h3>
-                                <p class="foodcarddescription">Et glace à la vanille de Patxaran</p>
+                            <h4 class="foodcardtitle">Macaron au chocolat d'exception</h4>
+                                <p class="foodcarddescription">Et glace vanille</p>
                                     <p class="foodcardprice">22€</p>
                         </div>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle">Mousse au chocolat</h3>
+                            <h4 class="foodcardtitle">Mousse au chocolat</h4>
                                 <p class="foodcarddescription">Au piment d'Espelette</p>
                                     <p class="foodcardprice">23€</p>
                         </div>
@@ -91,16 +91,24 @@
 			<div class="footercontent">
 				<h3 class="footerlogo">Ohmyfood</h3>
 				<ul class="footerlink">
-					<li class="footerlist">
-						<i class="fas fa-utensils list1"></i>Proposer un restaurant
-					</li>
-					<li class="footerlist">
-						<i class="fas fa-hands-helping list2"></i>Devenir partenaire
-					</li>
-					<li class="footerlist">Mentions légales
-					</li>
-					<li class="footerlist">Contact
-					</li>
+					<a href="#">
+						<li class="footerlist">
+							<i class="fas fa-utensils list1"></i>Proposer un restaurant
+						</li>
+					</a>
+					<a href="#">
+						<li class="footerlist ">
+							<i class="fas fa-hands-helping list2"></i>Devenir partenaire
+						</li>
+					</a>
+					<a href="#">
+						<li class="footerlist">Mentions légales
+						</li>
+					</a>
+					<a href="mailto:ohmyfood@ohmyfood.com">
+						<li class="footerlist">Contact
+						</li>
+					</a>
 				</ul>
 			</div>
 		</footer>
