--- a/cozna.html
+++ b/cozna.html
@@ -28,55 +28,55 @@
                 </header>
                 <div class="menucontainer">
                 <div class="entrées">
-                    <h2 class="foodtitle">ENTRÉES</h2>
+                    <h3 class="foodtitle">ENTRÉES</h3>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle">Soupe de la mer</h3>
+                            <h4 class="foodcardtitle">Soupe de la mer</h4>
                                 <p class="foodcarddescription">et sa crème de couteau</p>
                                     <p class="foodcardprice">25€</p>
                         </div>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle">Jardinière de légumes d'antan</h3>
+                            <h4 class="foodcardtitle">Jardinière de légumes d'antan</h4>
                                 <p class="foodcarddescription">Butternut et panais</p>
                                     <p class="foodcardprice">35€</p>
                         </div>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle">Tartare de veau</h3>
+                            <h4 class="foodcardtitle">Tartare de veau</h4>
                                 <p class="foodcarddescription">et sa croziflette</p>
                                     <p class="foodcardprice">20€</p>
                         </div>
                 </div>
                 <div class="plats">
-                    <h2 class="foodtitle">PLATS</h2>
+                    <h3 class="foodtitle">PLATS</h3>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle">Coquilles Saint-Jacques</h3>
+                            <h4 class="foodcardtitle">Coquilles Saint-Jacques</h4>
                                 <p class="foodcarddescription">Accompagnées d'une purée de panais</p>
                                     <p class="foodcardprice">40€</p>
                         </div>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle">Magret de canard</h3>
+                            <h4 class="foodcardtitle">Magret de canard</h4>
                                 <p class="foodcarddescription">Et gratin dauphinois</p>
                                     <p class="foodcardprice">35€</p>
                         </div>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle">Pigeonneau d’Ille-et-Vilaine</h3>
+                            <h4 class="foodcardtitle">Pigeonneau d’Ille-et-Vilaine</h4>
                                 <p class="foodcarddescription">Sur son lit de gnocchis aux légumes</p>
                                     <p class="foodcardprice">44€</p>
                         </div>
                 </div>
                 <div class="dessert">
-                    <h2 class="foodtitle">DESSERTS</h2>
+                    <h3 class="foodtitle">DESSERTS</h3>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle">Sorbet de chartreuse</h3>
+                            <h4 class="foodcardtitle">Sorbet de chartreuse</h4>
                                 <p class="foodcarddescription">Et mousse de noisettes</p>
                                     <p class="foodcardprice">18€</p>
                         </div>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle">Fondant au chocolat</h3>
+                            <h4 class="foodcardtitle">Fondant au chocolat</h4>
                                 <p class="foodcarddescription">à la vanille de la réunion</p>
                                     <p class="foodcardprice">22€</p>
                         </div>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle">Millefeuille alpin</h3>
+                            <h4 class="foodcardtitle">Millefeuille alpin</h4>
                                 <p class="foodcarddescription">Myrtilles et mûres</p>
                                     <p class="foodcardprice">23€</p>
                         </div>
@@ -91,16 +91,24 @@
 			<div class="footercontent">
 				<h3 class="footerlogo">Ohmyfood</h3>
 				<ul class="footerlink">
-					<li class="footerlist">
-						<i class="fas fa-utensils list1"></i>Proposer un restaurant
-					</li>
-					<li class="footerlist">
-						<i class="fas fa-hands-helping list2"></i>Devenir partenaire
-					</li>
-					<li class="footerlist">Mentions légales
-					</li>
-					<li class="footerlist">Contact
-					</li>
+					<a href="#">
+						<li class="footerlist">
+							<i class="fas fa-utensils list1"></i>Proposer un restaurant
+						</li>
+					</a>
+					<a href="#">
+						<li class="footerlist ">
+							<i class="fas fa-hands-helping list2"></i>Devenir partenaire
+						</li>
+					</a>
+					<a href="#">
+						<li class="footerlist">Mentions légales
+						</li>
+					</a>
+					<a href="mailto:ohmyfood@ohmyfood.com">
+						<li class="footerlist">Contact
+						</li>
+					</a>
 				</ul>
 			</div>
 		</footer>
