--- a/index.html
+++ b/index.html
@@ -117,16 +117,24 @@
 			<div class="footercontent">
 				<h3 class="footerlogo">Ohmyfood</h3>
 				<ul class="footerlink">
-					<li class="footerlist">
-						<i class="fas fa-utensils list1"></i>Proposer un restaurant
-					</li>
-					<li class="footerlist ">
-						<i class="fas fa-hands-helping list2"></i>Devenir partenaire
-					</li>
-					<li class="footerlist">Mentions légales
-					</li>
-					<li class="footerlist">Contact
-					</li>
+					<a href="#">
+						<li class="footerlist">
+							<i class="fas fa-utensils list1"></i>Proposer un restaurant
+						</li>
+					</a>
+					<a href="#">
+						<li class="footerlist ">
+							<i class="fas fa-hands-helping list2"></i>Devenir partenaire
+						</li>
+					</a>
+					<a href="#">
+						<li class="footerlist">Mentions légales
+						</li>
+					</a>
+					<a href="mailto:ohmyfood@ohmyfood.com">
+						<li class="footerlist">Contact
+						</li>
+					</a>
 				</ul>
 			</div>
 		</footer>
