--- a/lesapothicaires.html
+++ b/lesapothicaires.html
@@ -28,55 +28,55 @@
                 </header>
                 <div class="menucontainer">
                 <div class="entrées">
-                    <h2 class="foodtitle">ENTRÉES</h2>
+                    <h3 class="foodtitle">ENTRÉES</h3>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle">Tomates</h3>
+                            <h4 class="foodcardtitle">Tomates</h4>
                                 <p class="foodcarddescription">Hollandaise safran vin jaune</p>
                                     <p class="foodcardprice">25€</p>
                         </div>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle">Langoustines au BBQ</h3>
+                            <h4 class="foodcardtitle">Langoustines au BBQ</h4>
                                 <p class="foodcarddescription">Guanciale, haricots, crème fermière</p>
                                     <p class="foodcardprice">20€</p>
                         </div>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle">Pigeon, zaatar, trévise</h3>
+                            <h4 class="foodcardtitle">Pigeon, zaatar, trévise</h4>
                                 <p class="foodcarddescription">Sauce prune-myrtille</p>
                                     <p class="foodcardprice">35€</p>
                         </div>
                 </div>
                 <div class="plats">
-                    <h2 class="foodtitle">PLATS</h2>
+                    <h3 class="foodtitle">PLATS</h3>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle">Tartare de veau</h3>
+                            <h4 class="foodcardtitle">Tartare de veau</h4>
                                 <p class="foodcarddescription">Pata negra, asperges blanches</p>
                                     <p class="foodcardprice">40€</p>
                         </div>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle">Omble Chevalier</h3>
+                            <h4 class="foodcardtitle">Omble Chevalier</h4>
                                 <p class="foodcarddescription">Jus de chou</p>
                                     <p class="foodcardprice">35€</p>
                         </div>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle">Lavare fumé</h3>
+                            <h4 class="foodcardtitle">Lavare fumé</h4>
                                 <p class="foodcarddescription">Et riz rouge de camargue</p>
                                     <p class="foodcardprice">44€</p>
                         </div>
                 </div>
                 <div class="dessert">
-                    <h2 class="foodtitle">DESSERTS</h2>
+                    <h3 class="foodtitle">DESSERTS</h3>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle">Biscuit café, </h3>
+                            <h4 class="foodcardtitle">Biscuit café</h4>
                                 <p class="foodcarddescription">Sorbet gingembre</p>
                                     <p class="foodcardprice">18€</p>
                         </div>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle">Fraises</h3>
+                            <h4 class="foodcardtitle">Fraises</h4>
                                 <p class="foodcarddescription">Crème cuite</p>
                                     <p class="foodcardprice">22€</p>
                         </div>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle">Tarte au chocolat</h3>
+                            <h4 class="foodcardtitle">Tarte au chocolat</h4>
                                 <p class="foodcarddescription">Sur un lit d'avocat</p>
                                     <p class="foodcardprice">23€</p>
                         </div>
@@ -91,16 +91,24 @@
 			<div class="footercontent">
 				<h3 class="footerlogo">Ohmyfood</h3>
 				<ul class="footerlink">
-					<li class="footerlist">
-						<i class="fas fa-utensils list1"></i>Proposer un restaurant
-					</li>
-					<li class="footerlist">
-						<i class="fas fa-hands-helping list2"></i>Devenir partenaire
-					</li>
-					<li class="footerlist">Mentions légales
-					</li>
-					<li class="footerlist">Contact
-					</li>
+					<a href="#">
+						<li class="footerlist">
+							<i class="fas fa-utensils list1"></i>Proposer un restaurant
+						</li>
+					</a>
+					<a href="#">
+						<li class="footerlist ">
+							<i class="fas fa-hands-helping list2"></i>Devenir partenaire
+						</li>
+					</a>
+					<a href="#">
+						<li class="footerlist">Mentions légales
+						</li>
+					</a>
+					<a href="mailto:ohmyfood@ohmyfood.com">
+						<li class="footerlist">Contact
+						</li>
+					</a>
 				</ul>
 			</div>
 		</footer>
