--- a/tetedoie.html
+++ b/tetedoie.html
@@ -28,55 +28,55 @@
                 </header>
                 <div class="menucontainer">
                 <div class="entrées">
-                    <h2 class="foodtitle">ENTRÉES</h2>
+                    <h3 class="foodtitle">ENTRÉES</h3>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle">Tartare de thon</h3>
+                            <h4 class="foodcardtitle">Tartare de thon</h4>
                                 <p class="foodcarddescription">Assaisonné au yuzu</p>
                                     <p class="foodcardprice">25€</p>
                         </div>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle">Homard bleu</h3>
+                            <h4 class="foodcardtitle">Homard bleu</h4>
                                 <p class="foodcarddescription">Et algues diverses</p>
                                     <p class="foodcardprice">35€</p>
                         </div>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle">Velouté de cèpes </h3>
+                            <h4 class="foodcardtitle">Velouté de cèpes </h4>
                                 <p class="foodcarddescription">Aux truffes</p>
                                     <p class="foodcardprice">20€</p>
                         </div>
                 </div>
                 <div class="plats">
-                    <h2 class="foodtitle">PLATS</h2>
+                    <h3 class="foodtitle">PLATS</h3>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle">Lapin cuit au foin</h3>
+                            <h4 class="foodcardtitle">Lapin cuit au foin</h4>
                                 <p class="foodcarddescription">Sauce teriyaki</p>
                                     <p class="foodcardprice">40€</p>
                         </div>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle">Langouste rôtie </h3>
+                            <h4 class="foodcardtitle">Langouste rôtie</h4>
                                 <p class="foodcarddescription">Et ses légumes de saison</p>
                                     <p class="foodcardprice">35€</p>
                         </div>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle">Côte de boeuf Angus </h3>
+                            <h4 class="foodcardtitle">Côte de boeuf Angus</h4>
                                 <p class="foodcarddescription">Et sa purée de panais</p>
                                     <p class="foodcardprice">44€</p>
                         </div>
                 </div>
                 <div class="dessert">
-                    <h2 class="foodtitle">DESSERTS</h2>
+                    <h3 class="foodtitle">DESSERTS</h3>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle">Café gourmand</h3>
+                            <h4 class="foodcardtitle">Café gourmand</h4>
                                 <p class="foodcarddescription">Du chef</p>
                                     <p class="foodcardprice">18€</p>
                         </div>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle">Crème brulée </h3>
+                            <h4 class="foodcardtitle">Crème brulée </h4>
                                 <p class="foodcarddescription">À la lavande</p>
                                     <p class="foodcardprice">22€</p>
                         </div>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle">Tiramisu</h3>
+                            <h4 class="foodcardtitle">Tiramisu</h4>
                                 <p class="foodcarddescription">Speculoos-nutella</p>
                                     <p class="foodcardprice">23€</p>
                         </div>
@@ -91,20 +91,24 @@
 			<div class="footercontent">
 				<h3 class="footerlogo">Ohmyfood</h3>
 				<ul class="footerlink">
-					<a href="#"><li class="footerlist">
-						<i class="fas fa-utensils list1"></i>Proposer un restaurant
-					</li>
-                    </a>
-					<a href="#"><li class="footerlist">
-						<i class="fas fa-hands-helping list2"></i>Devenir partenaire
-					</li>
-                    </a>
-					<a href="#"><li class="footerlist">Mentions légales
-					</li>
-                    </a>
-					<a href="#"><li class="footerlist">Contact
-					</li>
-                    </a>
+					<a href="#">
+						<li class="footerlist">
+							<i class="fas fa-utensils list1"></i>Proposer un restaurant
+						</li>
+					</a>
+					<a href="#">
+						<li class="footerlist ">
+							<i class="fas fa-hands-helping list2"></i>Devenir partenaire
+						</li>
+					</a>
+					<a href="#">
+						<li class="footerlist">Mentions légales
+						</li>
+					</a>
+					<a href="mailto:ohmyfood@ohmyfood.com">
+						<li class="footerlist">Contact
+						</li>
+					</a>
 				</ul>
 			</div>
 		</footer>
