premier animation en cours, coeur degradé

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&family=Shrikhand&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous"/>
-		<link rel="stylesheet" href="./layout/css/style.css">
+		<link rel="stylesheet" href="./layout/sass/style.css">
 	</head>
 	<body>
 		<header class="header">
@@ -59,23 +59,25 @@
 						<footer>
 							<h3 class="restauranttitle">Les apothicaires</h3>
 							<div class="restaurantquartier">Foch</div>
-							<div class="favorite">
-								<i class="far fa-heart iconheart"></i>
+							<div class="menuicone">
+								<i class="far fa-heart emptyheart"></i>
+								<i class="fas fa-heart fullheart"></i>
 							</div>
 						</footer>
 					</a>
 					</div>
 					<div class="restaurantcartes carte2">
 					<a class="carte" href="bistrotdupotager.html">
-						<header class="carteheader">
+						<h eader class="carteheader">
 							<img src="layout/composants/images/bistrootdupotager.jpeg" alt class="carteimage"/>
 								<span class="restaurantlegend">Nouveau</span>
 						</header>
 						<footer>
 							<h3 class="restauranttitle">Le bistrot du potager</h3>
 							<div class="restaurantquartier">Gerland</div>
-							<div class="favorite">
-									<i class="far fa-heart iconheart"></i>
+							<div class="menuicone">
+								<i class="far fa-heart emptyheart"></i>
+								<i class="fas fa-heart fullheart"></i>
 							</div>
 						</footer>
 					</a>
@@ -89,9 +91,10 @@
 						<footer>
 							<h3 class="restauranttitle">Cozna</h3>
 							<div class="restaurantquartier">Sainte Claire</div>
-							<div class="favorite">	
-								<i class="far fa-heart iconheart"></i>
-							</div>	
+							<div class="menuicone">
+								<i class="far fa-heart emptyheart"></i>
+								<i class="fas fa-heart fullheart"></i>
+							</div>
 						</footer>
 					</a>
 					</div>
@@ -104,8 +107,9 @@
 						<footer>
 							<h3 class="restauranttitle">Tête d'oie</h3>
 							<div class="restaurantquartier">Saint George</div>
-							<div class="favorite">
-								<i class="far fa-heart iconheart"></i>
+							<div class="menuicone">
+								<i class="far fa-heart emptyheart"></i>
+								<i class="fas fa-heart fullheart"></i>
 							</div>
 						</footer>
 					</a>
