--- a/cozna.html
+++ b/cozna.html
@@ -10,7 +10,7 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&family=Shrikhand&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous"/>
-        <link rel="stylesheet" href="./layout/css/style.css">
+        <link rel="stylesheet" href="./layout/sass/style.css">
 	</head>
     <body>
 		<header class="header">
@@ -24,7 +24,10 @@
             <section class="menu">
                 <header class="menuheader">
                     <div class="menutitle">Cozna</div>
-                    <div class="menuicone"><i class="far fa-heart"></i></div>
+                    <div class="menuicone">
+                        <i class="far fa-heart emptyheart"></i>
+                        <i class="fas fa-heart fullheart"></i>
+                    </div>
                 </header>
                 <div class="menucontainer">
                 <div class="entrées">
