rajout de l'animation loading spinner :zap:

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 		<link rel="stylesheet" href="./layout/sass/style.css">
 	</head>
 	<body>
+		<div class="loadingspinnercontainer">
+			<img src="layout/composants/images/loadingspinner.svg" class="spinner"/>
+		</div>
 		<header class="header">
 			<h1 class="logo logoindex">ohmyfood</h1>
 		</header>
@@ -62,6 +65,7 @@
 							<div class="menuicone">
 								<i class="far fa-heart emptyheart"></i>
 								<i class="fas fa-heart fullheart"></i>
+
 							</div>
 						</footer>
 					</a>
